--- a/Lunchly/app/src/main/res/layout/activity_feed.xml
+++ b/Lunchly/app/src/main/res/layout/activity_feed.xml
@@ -1,21 +1,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".FeedActivity"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent" android:layout_height="match_parent"
     android:focusableInTouchMode="true" android:focusable="true"
-    android:background="@color/background">
+    tools:context=".FeedActivity" android:background="@color/background">
 
     <RelativeLayout
         android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:id="@+id/relativeLayout" android:layout_marginBottom="8dp">
+        android:padding="10dp" android:layout_marginBottom="10dp"
+        android:id="@+id/relativeLayout" android:background="@color/blue" >
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/filters"
             android:hint="Filters"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -38,7 +38,8 @@
         android:layout_width="match_parent" android:layout_height="match_parent"
         android:layout_below="@+id/relativeLayout" android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" android:layout_above="@+id/button"
-        android:layout_alignParentRight="true" android:layout_alignParentEnd="true">
+        android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
+        android:layout_marginLeft="10dp" android:layout_marginRight="10dp">
 
         <fragment
             android:layout_width="wrap_content"
@@ -63,7 +64,7 @@
         android:textColor="@color/white"
         android:onClick="goingSomewhere"
         android:id="@+id/button"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_margin="10dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
