--- a/Lunchly/app/src/main/res/layout/activity_menu_details.xml
+++ b/Lunchly/app/src/main/res/layout/activity_menu_details.xml
@@ -32,7 +32,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Continue to checkout"
+        android:text="Finish"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:id="@+id/button"
