--- a/Lunchly/app/src/main/res/values/colors.xml
+++ b/Lunchly/app/src/main/res/values/colors.xml
@@ -6,6 +6,10 @@
     <color name="textColor">#ff000000</color>
     <color name="white">#ffffffff</color>
 
+    <color name="red">#ffd3051b</color>
+
+    <color name="grey">#ff5c5c5c</color>
+
     <color name="black">#ff000000</color>
 
     <color name="green">#79cf38</color>
