--- a/Lunchly/app/src/main/res/layout/activity_dropoff.xml
+++ b/Lunchly/app/src/main/res/layout/activity_dropoff.xml
@@ -3,6 +3,10 @@
     android:layout_height="match_parent" android:padding="@dimen/activity_vertical_margin"
     tools:context=".DropoffActivity" android:background="@android:color/white" >
 
-
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.MapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
