--- a/Lunchly/app/src/main/res/layout/activity_finalize.xml
+++ b/Lunchly/app/src/main/res/layout/activity_finalize.xml
@@ -89,19 +89,15 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
 
-            <RelativeLayout
-                android:layout_width="match_parent" android:layout_height="match_parent"
-                android:layout_alignLeft="@id/center1" android:layout_alignStart="@id/center1" >
-
-                <NumberPicker
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/numberPicker"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:paddingStart="@dimen/activity_horizontal_margin"
-                    android:layout_centerInParent="true" />
-
-            </RelativeLayout>
+            <NumberPicker
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/numberPicker"
+                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
 
         </RelativeLayout>
 
